# cuda-closest-points

./: .gitignore  CMakeLists.txt  Makefile  README.md  closest_points_cuda.pyi  main.cu  profile.bash  pyproject.toml  rebuild_pybind.bash  test.py
include/: host_code.cuh  kernels.cuh  types.h
src/: bindings.cpp  detect_masks.cu  host_code.cu  indexing_kernels.cu  min_distance_kernels.cu  test.cpp
